# MotiveProxy

./: .gitignore  .pre-commit-config.yaml  AGENT.md  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  client_connection_diagnosis.json  env.template  pyproject.toml  requirements.txt  setup.ps1  setup.sh  setup_env.py  tasks.py  test_llm_direct.py
examples/: README.md  basic_usage.py  curl_examples.sh  game_integration.py
src/motive_proxy/: __init__.py  __main__.py  app.py  cli.py  middleware.py  models.py  observability.py  protocol_manager.py  rate_limiter.py  session.py  session_manager.py  settings.py  streaming.py
src/motive_proxy/protocols/: __init__.py  anthropic.py  base.py  openai.py
src/motive_proxy/routes/: __init__.py  chat_completions.py  health.py
src/motive_proxy/testing/: __init__.py  client_simulator.py  e2e_cli.py  e2e_cli_old.py  e2e_test_runner.py  llm_client.py  log_collector.py  scenarios.py  test_client.py  test_client_runner.py
tests/: __init__.py  conftest.py  test_app.py  test_chat_route_conversation.py  test_e2e_conversation_bug.py  test_handshake.py  test_llm_conversation_flow.py  test_llm_test_client.py  test_observability.py  test_protocols.py  test_security.py  test_server_integration.py  test_session_concurrency.py  test_session_manager.py  test_session_protocol_fix.py  test_session_timeout_bug.py  test_smoke.py  test_streaming.py  test_ttl_cleanup.py
tests/e2e/: README.md  __init__.py  test_scenarios.py
